-Added -no-warn flag for runtime